[package]
name = "pico_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp2040-hal = "0.8.1"
rp-pico = "0.7.0"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
cortex-m-rt = { version = "0.7.3", optional = true}
cortex-m = "0.7.7"
fugit = "0.3.7"
embedded-graphics = "0.8.0"
nb = "1.1.0"
ssd1306 = "0.8.0"
usbd-serial = "0.1.1"
usb-device = "0.2.9"
heapless = "0.7.16"
rp2040-boot2 = "0.3.0"
# cortex-m-rtic = "1.1.4"
rtic-monotonics = { version = "1.0.0", features = ["rp2040"] }
rtic = { version = "2.0.0", features = [ "thumbv6-backend" ] }
rtic-sync = "1.0.1"
critical-section = "1.1.1"

[features]
# # This is the set of features we enable by default
# default = ["boot2", "rt", "critical-section-impl", "rom-func-cache"]
# 
# # critical section that is safe for multicore use
# critical-section-impl = ["rp2040-hal/critical-section-impl"]
# 
# # 2nd stage bootloaders for rp2040
# boot2 = ["rp2040-boot2"]
# 
# Minimal startup / runtime for Cortex-M microcontrollers
rt = ["cortex-m-rt","rp2040-hal/rt"]
# 
# # This enables a fix for USB errata 5: USB device fails to exit RESET state on busy USB bus.
# # Only required for RP2040 B0 and RP2040 B1, but it also works for RP2040 B2 and above
# rp2040-e5 = ["rp2040-hal/rp2040-e5"]
# 
# # Memoize(cache) ROM function pointers on first use to improve performance
# rom-func-cache = ["rp2040-hal/rom-func-cache"]
# 
# # Disable automatic mapping of language features (like floating point math) to ROM functions
# disable-intrinsics = ["rp2040-hal/disable-intrinsics"]
# 
# # This enables ROM functions for f64 math that were not present in the earliest RP2040s
# rom-v2-intrinsics = ["rp2040-hal/rom-v2-intrinsics"]
