[package]
name = "pico_test"
version = "0.1.0"
edition = "2021"
runner = "elf2uf2-rs -d"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
midly = {version = "0.5.3",  default-features = false}

cortex-m = "0.7.7"

embedded-hal = { version = "0.2.7", features = ["unproven"] }

rp-pico = "0.9.0"

rtic = { version = "2.1.1", features = [ "thumbv6-backend" ]}
rtic-monotonics = { version = "2.0.2", features = [ "rp2040", "cortex-m-systick", "defmt" ]}
portable-atomic = { version = "1", features = ["critical-section"] }
rtic-sync = "1.3.0"
heapless = "0.8.0"
fugit = "0.3.7"

panic-semihosting = "0.6.0"
